bug fix z-index in menu component

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -6,12 +6,12 @@
     top: 0;
     background: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(5px);
-    z-index: 1;
+    z-index: 1000;
   }
   
   nav {
     position: fixed;
-    z-index: 2;
+    z-index: 1001;
     width: 100%;
     height:100vh;
     top:0
